# servicepoint

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  about_display.md  flake.nix  generate-coverage  shell.nix
airportdisplay/: Cargo.toml
crates/servicepoint/: Cargo.toml  README.md
crates/servicepoint/examples/: announce.rs  brightness_tester.rs  game_of_life.rs  moving_line.rs  random_brightness.rs  websocket.rs  wiping_clear.rs
crates/servicepoint/src/: bit_vec.rs  bitmap.rs  bitvec.rs  brightness.rs  brightness_grid.rs  byte_grid.rs  c_slice.rs  char_grid.rs  command.rs  command_code.rs  compression.rs  compression_code.rs  connection.rs  cp437.rs  cp437_grid.rs  data_ref.rs  grid.rs  lib.rs  origin.rs  packet.rs  pixel_grid.rs  primitive_grid.rs  value_grid.rs
crates/servicepoint_bevy/: Cargo.toml  README.md
crates/servicepoint_bevy/src/: lib.rs
crates/servicepoint_binding_c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/servicepoint_binding_c/examples/lang_c/: Cargo.toml  Makefile  build.rs
crates/servicepoint_binding_c/examples/lang_c/include/: servicepoint.h
crates/servicepoint_binding_c/examples/lang_c/src/: main.c
crates/servicepoint_binding_c/src/: bit_vec.rs  bitmap.rs  bitvec.rs  brightness_grid.rs  byte_grid.rs  byte_slice.rs  c_slice.rs  char_grid.rs  command.rs  connection.rs  constants.rs  cp437_grid.rs  lib.rs  packet.rs  pixel_grid.rs
crates/servicepoint_binding_cs/: Cargo.toml  README.md  ServicePoint.sln  build.rs
crates/servicepoint_binding_cs/ServicePoint/: BitVec.cs  BitVec.g.cs  Bitmap.cs  Bitmap.g.cs  BrightnessGrid.cs  BrightnessGrid.g.cs  ByteGrid.cs  ByteSlice.cs  ByteSlice.g.cs  Command.cs  Command.g.cs  Connection.cs  Connection.g.cs  Constants.cs  Constants.g.cs  Cp437Grid.cs  Cp437Grid.g.cs  GlobalUsings.cs  Packet.cs  Packet.g.cs  PixelGrid.cs  ServicePoint.csproj  ServicePointExtensions.cs  SpNativeInstance.cs
crates/servicepoint_binding_cs/ServicePoint.Tests/: BitVecTests.cs  BitmapTests.cs  BrightnessGridTests.cs  CommandTests.cs  Cp437GridTests.cs  GlobalUsings.cs  ServicePoint.Tests.csproj
crates/servicepoint_binding_cs/ServicePoint/BindGen/: BitVecNative.g.cs  BitmapNative.g.cs  BrightnessGridNative.g.cs  ByteSliceNative.g.cs  CommandNative.g.cs  ConnectionNative.g.cs  ConstantsNative.g.cs  Cp437GridNative.g.cs  Extensions.cs  LibNative.g.cs  PacketNative.g.cs  ServicePoint.g.cs
crates/servicepoint_binding_cs/examples/lang_cs/: Program.cs  lang_cs.csproj
crates/servicepoint_binding_cs/src/: BitVec.cs  ByteGrid.cs  Command.cs  Connection.cs  Packet.cs  PixelGrid.cs  ServicePoint.csproj  lib.rs
crates/servicepoint_binding_cs/src/BindGen/: ServicePoint2.g.cs
crates/servicepoint_binding_py/: Cargo.toml  Makefile  Readme.md  pyproject.toml
crates/servicepoint_binding_py/servicepoint/: __init__.py
crates/servicepoint_binding_py/src/: lib.rs
crates/servicepoint_binding_uniffi/: Cargo.toml  README.md  generate-bindings.sh  uniffi.toml
crates/servicepoint_binding_uniffi/examples/csharp/: Program.cs  example.csproj
crates/servicepoint_binding_uniffi/libraries/: .gitignore
crates/servicepoint_binding_uniffi/libraries/csharp/: ServicePoint.csproj  csharp.sln  servicepoint_binding_uniffi.cs
crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint/: Constants.cs  ServicePoint.csproj  servicepoint_binding_uniffi.cs
crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint.Example/: Program.cs  ServicePoint.Example.csproj
crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint.Tests/: BitmapTests.cs  CharGridTests.cs  CommandTests.cs  ConnectionTests.cs  GlobalUsings.cs  ServicePoint.Tests.csproj  UnitTest1.cs
crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/: servicepoint_binding_uniffi.c  servicepoint_binding_uniffi.go  servicepoint_binding_uniffi.h
crates/servicepoint_binding_uniffi/libraries/kotlin/servicepoint/: servicepoint_binding_uniffi.kt
crates/servicepoint_binding_uniffi/libraries/kotlin/uniffi/servicepoint_binding_uniffi/: servicepoint_binding_uniffi.kt
crates/servicepoint_binding_uniffi/libraries/python/: servicepoint_binding_uniffi.py
crates/servicepoint_binding_uniffi/libraries/ruby/: servicepoint.gemspec  servicepoint_binding_uniffi.rb
crates/servicepoint_binding_uniffi/libraries/ruby/example/: Gemfile  example.rb  example.sh
crates/servicepoint_binding_uniffi/libraries/ruby/lib/: servicepoint_binding_uniffi.rb
crates/servicepoint_binding_uniffi/libraries/swift/: servicepoint_binding_uniffi.swift  servicepoint_binding_uniffiFFI.h  servicepoint_binding_uniffiFFI.modulemap
crates/servicepoint_binding_uniffi/src/: bitmap.rs  bitvec.rs  brightness_grid.rs  char_grid.rs  command.rs  compression_code.rs  connection.rs  constants.rs  cp437_grid.rs  errors.rs  lib.rs
crates/servicepoint_binding_uniffi/src/examples/ServicePointCSharp/: Program.cs  ServicePointCSharp.csproj
examples/: Cargo.toml  announce.rs  brightness_tester.rs  fewer_copies.rs  game_of_life.rs  moving_line.rs  own_command.rs  random_brightness.rs  tiny_announce.rs  websocket.rs  wiping_clear.rs
examples/lang_c/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.rs  main.c
examples/lang_c/src/: main.c
hello_display/: Cargo.toml
send_text/: Cargo.toml
servicepoint2/: Cargo.toml  bindings.h  build.rs  generate-include  sp2-bindings.h
servicepoint2-binding-c/: cbindgen.toml  generate.sh  servicepoint2.h
servicepoint2-binding-cs/: Cargo.toml  ServicePoint2.csproj  ServicePoint2.sln  build.rs
servicepoint2/include/: servicepoint2.h
servicepoint2/src/: bit_vec.rs  byte_grid.rs  c_slice.rs  command.rs  command_code.rs  compression.rs  compression_code.rs  connection.rs  data_ref.rs  grid.rs  lib.rs  packet.rs  pixel_grid.rs
src/: bit_vec.rs  bitmap.rs  brightness.rs  brightness_grid.rs  byte_grid.rs  char_grid.rs  command.rs  command_code.rs  command_codes.rs  compression.rs  compression_code.rs  connection.rs  constants.rs  cp437.rs  cp437_grid.rs  lib.rs  main.rs  origin.rs  packet.rs  pixel_grid.rs  value_grid.rs
(+108 files in other folders)
