[workspace]
resolver = "2"
members = [
    "crates/servicepoint",
    "crates/servicepoint_binding_c",
    "crates/servicepoint_binding_c/examples/lang_c",
    "crates/servicepoint_binding_cs",
    "crates/servicepoint_csbindgen/csbindgen"
]

[workspace.package]
version = "0.10.0"

[workspace.lints.rust]
missing-docs = "warn"
