[package]
name = "servicepoint"
version = "0.13.2"
publish = true
edition = "2021"
license = "GPL-3.0-or-later"
description = "A rust library for the CCCB Service Point Display."
homepage = "https://docs.rs/crate/servicepoint"
repository = "https://git.berlin.ccc.de/servicepoint/servicepoint"
readme = "README.md"
keywords = ["cccb", "cccb-servicepoint"]
rust-version = "1.70.0"

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4"
bitvec = "1.0"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.5", optional = true }
zstd = { version = "0.13", optional = true }
rust-lzma = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }
tungstenite = { version = "0.26", optional = true }
once_cell = { version = "1.20", optional = true }
thiserror = "2.0"

[features]
default = ["compression_lzma", "protocol_udp", "cp437"]
compression_zlib = ["dep:flate2"]
compression_bzip2 = ["dep:bzip2"]
compression_lzma = ["dep:rust-lzma"]
compression_zstd = ["dep:zstd"]
all_compressions = ["compression_zlib", "compression_bzip2", "compression_lzma", "compression_zstd"]
rand = ["dep:rand"]
protocol_udp = []
protocol_websocket = ["dep:tungstenite"]
cp437 = ["dep:once_cell"]

[[example]]
name = "random_brightness"
required-features = ["rand"]

[[example]]
name = "game_of_life"
required-features = ["rand"]

[[example]]
name = "websocket"
required-features = ["protocol_websocket"]

[dev-dependencies]
# for examples
clap = { version = "4.5", features = ["derive"] }

[lints.rust]
missing-docs = "warn"
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining_impl_trait_reachable = "warn"
rust-2024-compatibility = "warn"

[lints.clippy]
complexity = {level = "warn", priority = -1 }
perf = {level = "warn", priority = -1 }
style = {level = "warn", priority = -1 }
pedantic = {level = "warn", priority = -1 }

unwrap_used  = "warn"
expect_used = "warn"
panic = "warn"
incompatible_msrv = "forbid"

# too many false positives as often the module only contains the one struct
module_name_repetitions = "allow"

[lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[package.metadata.docs.rs]
all-features = true
