[package]
name = "servicepoint2"
version = "0.1.3"
publish = true
edition = "2021"
license = "GPL-3.0-or-later"
description = "A rust library for the CCCB Service Point Display."
homepage = "https://docs.rs/crate/servicepoint2"
repository = "https://github.com/kaesaecracker/servicepoint"
readme = "../README.md"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
log = "0.4"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.4", optional = true }
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }

[features]
default = ["compression-gz", "compression-bz", "compression-lz", "compression-zs"]
compression-gz = ["dep:flate2", "compression"]
compression-bz = ["dep:bzip2", "compression"]
compression-lz = ["dep:lz4", "compression"]
compression-zs = ["dep:zstd", "compression"]
compression = []
c-api = []

[build-dependencies]
cbindgen = "0.26.0"
