[package]
name = "servicepoint2"
version = "0.3.0"
publish = true
edition = "2021"
license = "GPL-3.0-or-later"
description = "A rust library for the CCCB Service Point Display."
homepage = "https://docs.rs/crate/servicepoint2"
repository = "https://github.com/kaesaecracker/servicepoint"
readme = "../README.md"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
log = "0.4"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }
rust-lzma = { version = "0.6.0", optional = true }

[features]
default = ["compression_zlib", "compression_bzip2", "compression_lzma", "compression_zstd"]
compression_zlib = ["dep:flate2", "compression"]
compression_bzip2 = ["dep:bzip2", "compression"]
compression_lzma = ["dep:rust-lzma", "compression"]
compression_zstd = ["dep:zstd", "compression"]
compression = []
c_api = []
