[package]
name = "servicepoint_binding_c"
version.workspace = true
publish = false
edition = "2021"
license = "GPL-3.0-or-later"
description = "C bindings for the servicepoint crate."
homepage = "https://docs.rs/crate/servicepoint"
repository = "https://github.com/cccb/servicepoint"
readme = "README.md"
links = "servicepoint"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.26.0"

[dependencies.servicepoint]
version = "0.5.0"
path = "../servicepoint"
features = ["all_compressions"]
