[package]
name = "servicepoint_binding_c"
version.workspace = true
publish = true
edition = "2021"
license = "GPL-3.0-or-later"
description = "C bindings for the servicepoint crate."
homepage = "https://docs.rs/crate/servicepoint_binding_c"
repository = "https://git.berlin.ccc.de/servicepoint/servicepoint"
readme = "README.md"
links = "servicepoint"
keywords = ["cccb", "cccb-servicepoint", "cbindgen"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies.servicepoint]
version = "0.13.1"
path = "../servicepoint"
features = ["all_compressions"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
