[package]
name = "servicepoint_binding_cs"
version = "0.4.2"
edition = "2021"
publish = false
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]
test = false

[build-dependencies]
csbindgen = "1.8.0"

[dependencies]
servicepoint_binding_c = { path = "../servicepoint_binding_c" }
servicepoint = { path = "../servicepoint" }
