[package]
name = "servicepoint_binding_cs"
version.workspace = true
edition = "2021"
publish = false
readme = "README.md"

[lib]
crate-type = ["cdylib"]
test = false

[build-dependencies]
csbindgen = { path = "../servicepoint_csbindgen/csbindgen" }
convert_case = "0.6.0"

[dependencies]
servicepoint_binding_c = { version = "0.10.0", path = "../servicepoint_binding_c" }
servicepoint = { version = "0.10.0", path = "../servicepoint" }

[lints]
workspace = true
