[package]
name = "servicepoint_binding_uniffi"
version.workspace = true
publish = false
edition = "2021"
license = "GPL-3.0-or-later"
description = "C bindings for the servicepoint crate."
homepage = "https://docs.rs/crate/servicepoint_binding_c"
repository = "https://github.com/cccb/servicepoint"
#readme = "README.md"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
uniffi = { version = "0.25.0" , features = [ "build" ] }

[dependencies]
uniffi = { version = "0.25.0" }
thiserror = "1.0.66"

[dependencies.servicepoint]
version = "0.11.0"
path = "../servicepoint"
features = ["all_compressions"]

[dependencies.uniffi-bindgen-cs]
git="https://github.com/NordSecurity/uniffi-bindgen-cs"
# tag="v0.8.3+v0.25.0"
rev="f68639fbc720b50ebe561ba75c66c84dc456bdce"
optional=true

[lints]
#workspace = true

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen-cs"
required-features= ["cs"]

[features]
default = []
cs = ["dep:uniffi-bindgen-cs"]
